--- a/styler.css
+++ b/styler.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #F5F5DC;
+    background-color: #f5ab0aef;
   }
   
   header {
