--- a/styler2.css
+++ b/styler2.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #F5F5DC;
+    background-color:  #f5ab0aef;
     margin: 0;
     padding: 0;
   }
